feat: documenting endpoints
