# cmd/api/feed.go
@@ -7,6 +7,25 @@ import (
 	"github.com/Ng1n3/social/internal/store"
 )
 
+// getUserFeedHandler godoc
+//
+//	@Summary		Fetches the user feed
+//	@Description	Fetches the user feed
+//	@Tags			feed
+//	@Accept			json
+//	@Produce		json
+//	@Param			since	query		string	false	"Since"
+//	@Param			until	query		string	false	"Until"
+//	@Param			limit	query		int		false	"Limit"
+//	@Param			offset	query		int		flase	"Offset"
+//	@Param			sort	query		string	false	"Sort"
+//	@Param			tags	query		string	false	"Tags"
+//	@Param			search	query		string	false	"Search"
+//	@Success		200		{object}	[]store.PostWithMetadata
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/feed [get]
 func (app *application) getUserFeedHandler(w http.ResponseWriter, r *http.Request) {
 	// pagination, filters
 	fq := store.PaginationFeedQuery{
